plugins/eis: Do not send events from release warp to capture

Before we warped the pointer and then deactivated the capture,
this generated a motion event that we forwarded to the capture
(but not frame which resulted in a libei bug log).
Instead deactivate first and warp later before showing the cursor
again.
BUG:521486
FIXED-IN:6.6.6