autotests/integration/input_capture_test.cpp
@@ -302,6 +302,9 @@ void TestInputCapture::testInputCapture()
         ei_event_unref(event);
     }
 
+    // We receive a warp from the release
+    QVERIFY(motionSpy.wait());
+
     Test::pointerMotion({2, 2}, ++timestamp);
     Test::pointerButtonPressed(BTN_LEFT, ++timestamp);
     Test::pointerButtonReleased(BTN_LEFT, ++timestamp);
